<resources>
    <string name="app_name">Resume-Builder</string>
    <string name="resume_builder">Resume-Builder!</string>
    <string name="action_settings">Settings</string>
    <string name="hello">Click on the buttons to send an email in different ways</string>
    <string  name="feedbacktitle">Enter Personal Information for Resume:</string>
    <string  name="educationdetailstitle">Enter Education Details for Resume:</string>
    <string name="feedbackname">Full Name:</string>
    <string name="feedbackaddress">Address </string>
    <string name="street">Street </string>
    <string name="city">City </string>
    <string name="state">State </string>
    <string name="zipcode">zip </string>
    <string  name="upload">Please select files to upload:</string>

    <string name="feedbackemail">Email </string>
    <string name="feedbackbutton">Save Personal Information</string>
    <string name="saveeducationbutton">Save Education Information</string>
    <string name="clearbutton">Clear</string>
    <string name="newbutton">Add</string>
    <string name="removebutton">Delete</string>

    <string name="viewresultsbutton">View Current Resume</string>

    <string name="cancelresetbutton">Reset</string>
    <string name="gendertype">Gender...</string>
    <string name="languageknown">Languages known</string>
    <string name="careerobjectives">Career Objectives</string>
    <string name="strength">Strength</string>
    <string name="hobbies">Hobbies</string>
    <string name="gender1">M(ale)</string>
    <string name="gender2">F(emale)</string>

    <string name="Professor">Professor Name</string>

    <string name="education_line1">Education Line1:</string>
    <string name="education_line2">Education Line2:</string>
    <string name="education_line3">Education Line3:</string>
    <string name="education_line4">Education Line4:</string>
    <string name="education_line5">Education Line5:</string>
    <string name="education_line6">Education Line6:</string>
    <string name="education_line7">Education Line7:</string>

    <string name="undergrad_college_name">UnderGrad College:</string>
    <string name="grad_college_name">Grad College:</string>
    <string name="undergrad_years_attend">Under Graduate Years Attend:</string>
    <string name="grad_years_attend">Graduate Years Attend:</string>
    <string name="high_school_attended">High School Attended:</string>
    <string name="job_history">Employment History:</string>
    <string name="skills">Skills:</string>
    <string name="certificate">Certificate:</string>
    <string name="save">Save</string>
    <string name="add_employment">Add </string>

    <string name="summary">Summary:</string>
    <string name="when">When :</string>
    <string name="experience">Employment :</string>

    <string name="hintTxtItem">Enter an item here ...</string>
    <string name="txtEmpty">List is empty</string>
    <string name="experience1">Employment 1:</string>
    <string name="from">From - To:</string>
    <string name="company">Company:</string>
    <string name="description">Description:</string>

    <string name="experience2">Employment 2:</string>
    <string name="experience3">Employmenromt 3:</string>
    <string name="experience4">Employment 4:</string>
    <string name="experience5">Employment 5:</string>
    <string name="experience6">Employment 6:</string>
    <string name="experience7">Employment 7:</string>

    <string name="info">Info</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="app_name_with_index">ResumeBuilder (%1$d/%2$d)</string>
    <string name="lblbtnadd">Add</string>
    <string name="lblbtndel">Delete</string>

    <string name="service_name">WebServer</string>
    <string name="main_no_items">No classes to display</string>


</resources>
