<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/EditTextAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextAddress"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackaddress"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextStreet"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextStreet"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextCity"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCity"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextState"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextState"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextZip"
            android:layout_width="fill_parent"></EditText>
        <EditText
            android:id="@+id/EditTextZip"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>


        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextLanguage"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextLanguage"
            android:layout_height="wrap_content"
            android:hint="@string/languageknown"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/EditTextStrength"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextStrength"
            android:layout_height="wrap_content"
            android:hint="@string/strength"
            android:nextFocusDown="@+id/EditTextHobbies"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextHobbies"
            android:layout_height="wrap_content"
            android:hint="@string/hobbies"
            android:nextFocusDown="@+id/EditTextCareerObjectives"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextSkills"
            android:layout_height="wrap_content"
            android:hint="@string/skills"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCareerObjectives"
            android:layout_height="wrap_content"
            android:hint="@string/careerobjectives"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"

            android:lines="25"></EditText>

        <Button
            android:id="@+id/buttonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            style="@style/button"

            android:onClick="sendFeedback"
            android:layout_width="fill_parent"></Button>

        <Button
            android:id="@+id/buttonClear"
            android:layout_height="wrap_content"
            android:text="@string/clearbutton"
            style="@style/button"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent"></Button>


    </LinearLayout>
</ScrollView>
