<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">
    xxxx
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dip"
            android:layout_weight="2"
            android:gravity="right"
            android:text="User Id"
            android:textColor="#FF000000"></TextView>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"></EditText>
    </LinearLayout>


    xxxx


    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedbacktitle"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"
            android:background="@drawable/edittextstyle"></EditText>

        <EditText
            android:id="@+id/EditTextAddress"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackaddress"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextStreet"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCity"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextState"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>
        <EditText
            android:id="@+id/EditTextZip"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>


        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextLanguage"
            android:layout_height="wrap_content"
            android:hint="@string/languageknown"
            android:inputType="textPersonName"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCareerObjectives"
            android:layout_height="wrap_content"
            android:hint="@string/careerobjectives"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="25"
            android:lines="10"></EditText>

        <EditText
            android:id="@+id/EditTextStrength"
            android:layout_height="wrap_content"
            android:hint="@string/strength"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextHobbies"
            android:layout_height="wrap_content"
            android:hint="@string/hobbies"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>
        <Button
            android:id="@+id/buttonSendFeedback"
            android:layout_height="wrap_content"
            android:text="@string/feedbackbutton"
            android:onClick="sendFeedback"
            android:layout_width="fill_parent"></Button>

    </LinearLayout>
</ScrollView>
