<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/EditTextName"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/EditTextAddress"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextAddress"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackaddress"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextStreet"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextStreet"
            android:layout_height="wrap_content"
            android:hint="@string/street"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextCity"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCity"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextState"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextState"
            android:layout_height="wrap_content"
            android:hint="@string/state"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextZip"
            android:layout_width="fill_parent"></EditText>
        <EditText
            android:id="@+id/EditTextZip"
            android:layout_height="wrap_content"
            android:hint="@string/zipcode"
            android:inputType="textPostalAddress"
            android:layout_width="fill_parent"></EditText>


        <EditText
            android:id="@+id/EditTextEmail"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackemail"
            android:inputType="textPostalAddress"
            android:nextFocusDown="@+id/EditTextLanguage"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextLanguage"
            android:layout_height="wrap_content"
            android:hint="@string/languageknown"
            android:inputType="textPersonName"
            android:nextFocusDown="@+id/EditTextStrength"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextStrength"
            android:layout_height="wrap_content"
            android:hint="@string/strength"
            android:nextFocusDown="@+id/EditTextHobbies"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextHobbies"
            android:layout_height="wrap_content"
            android:hint="@string/hobbies"
            android:nextFocusDown="@+id/EditTextCareerObjectives"
            android:inputType="text"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextSkills"
            android:layout_height="wrap_content"
            android:hint="@string/skills"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCareerObjectives"
            android:layout_height="wrap_content"
            android:hint="@string/careerobjectives"
            android:gravity="left|top"
            android:inputType="textMultiLine"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:ems="10"
            android:lines="7"></EditText>

        <LinearLayout
            android:id="@+id/buttonEditPersonalView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="1">

            <Button
                android:id="@+id/buttonSendFeedback"
                android:layout_height="wrap_content"
                android:text="@string/save"
                style="@style/button"
                android:layout_gravity="center_horizontal"
                android:onClick="sendFeedback"
                android:layout_width="100dp"></Button>

            <Button
                android:id="@+id/buttonClear"
                android:layout_height="wrap_content"
                android:text="@string/clearbutton"
                style="@style/button"
                android:layout_gravity="center_horizontal"
                android:onClick="sendFeedback"
                android:layout_width="100dp"></Button>

            </LinearLayout>
    </LinearLayout>

</ScrollView>
