<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView03"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/TextViewTitle03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_history"
            android:textSize="10pt"></TextView>

        <EditText
            android:id="@+id/EditTextFrom"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/from"
            android:inputType="date"></EditText>

        <EditText
            android:id="@+id/EditTextCompany"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            android:inputType="textMultiLine"></EditText>

        <EditText
            android:id="@+id/EditTextDescription"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:inputType="textMultiLine"></EditText>

        <LinearLayout
            android:id="@+id/buttonView"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/buttonAdd"
                style="@style/button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:text="@string/add_employment"></Button>

            <Button
                android:id="@+id/buttonGenerate"
                style="@style/button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:text="@string/save"></Button>


            <Button
                android:id="@+id/buttonClear"
                style="@style/button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginLeft="10dp"
                android:onClick="sendFeedback"
                android:text="@string/clearbutton"></Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
