<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView03"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">


        <TextView
            android:id="@+id/TextViewTitle03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/job_history"
            android:textSize="10pt"></TextView>


        <EditText
            android:id="@+id/EditTextJobHistory"
            android:layout_height="wrap_content"
            android:hint="@string/job_history"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextSkill"
            android:layout_height="wrap_content"
            android:hint="@string/skills"

            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>

        <EditText
            android:id="@+id/EditTextCertificate"
            android:layout_height="wrap_content"
            android:hint="@string/certificate"
            android:inputType="textMultiLine"
            android:layout_width="fill_parent"></EditText>

        <Button
            android:id="@+id/buttonGenerate"
            android:layout_height="wrap_content"
            android:text="@string/generate_resume"
            android:onClick="generateResume"
            android:layout_width="fill_parent"></Button>

    </LinearLayout>
</ScrollView>
